--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body class="bg-gray-100">
     <div class="flex justify-center items-center min-h-screen bg-teal-100">
       <div class="bg-white p-8 rounded-lg shadow-lg w-[600px]">
-        <div class="mb-4 text-center ">
+        <div class="mb-4 text-center !flex">
           <img
             src="./assests/Screenshot_16.png"
-            class="mx-auto mb-4"
+            class="mb-4 "
           />
-          <h2 class="text-2xl font-bold">Sign In</h2>
+          <h2 class="text-2xl font-bold !flex-1">Sign In</h2>
         </div>
         <form>
           <div class="mb-4">
