--- a/Dialogs.html
+++ b/Dialogs.html
@@ -14,7 +14,7 @@
         </h2>
         <form>
           <div class="mb-4">
-            <label class="block text-gray-700"
+            <label class="block text-gray-700 text-xl font-bold mb-6"
               >Describe how you are feeling</label
             >
             <textarea
@@ -24,14 +24,52 @@
             ></textarea>
           </div>
           <div class="mb-4">
-            <label class="block text-gray-700">Upload documents</label>
-            <input
-              type="file"
-              class="w-full px-4 py-2 border border-gray-300 rounded-md"
-            />
+            <label class="block text-gray-700 text-xl font-bold !mb-3"
+              >Upload documents</label
+            >
+            <label
+              for="uploadFile1"
+              class="bg-white text-gray-500 font-semibold text-base rounded max-w-md flex items-center justify-left cursor-pointer mx-auto font-[sans-serif] gap-10"
+            >
+              <p class="px-4 py-2 bg-gray-300 rounded-full">Browse...</p>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="62"
+                height="62"
+                viewBox="0 0 62 62"
+                fill="none"
+              >
+                <rect width="62" height="62" rx="31" fill="#423397" />
+                <g clip-path="url(#clip0_62_45)">
+                  <path
+                    d="M32.1951 16.4242C31.5693 16.4875 30.3599 16.7547 29.699 16.9727C26.0849 18.1539 23.2021 20.9383 22.0208 24.3695L21.824 24.9461L21.4372 24.9883C19.5037 25.1781 18.3576 25.5578 16.9583 26.4719C15.8052 27.2172 14.5255 28.6586 13.8927 29.9172C12.9154 31.8578 12.7185 34.4945 13.3935 36.6391C13.8083 37.961 14.5326 39.1422 15.5662 40.1828C16.9162 41.5399 18.5826 42.4117 20.3826 42.707C21.3669 42.8617 27.2521 42.8617 27.5826 42.707C27.9833 42.5172 28.1521 42.2149 28.1521 41.6734C28.1521 41.1461 28.0255 40.907 27.6177 40.668C27.3927 40.5344 27.2099 40.5274 24.0388 40.4852C20.8466 40.45 20.6779 40.443 20.1787 40.2883C17.6896 39.543 15.9529 37.6797 15.4255 35.1977C15.2849 34.5649 15.2919 33.243 15.4326 32.568C15.6787 31.3867 16.2622 30.2828 17.1412 29.3617C18.4138 28.0258 19.9255 27.3789 21.9294 27.3016C23.1037 27.2524 23.1388 27.2524 23.4341 26.9852C23.638 26.8094 23.7294 26.6195 24.0107 25.7758C24.1865 25.2274 24.4607 24.5172 24.6083 24.2008C25.8458 21.5781 28.4123 19.5883 31.4216 18.8992C32.3216 18.6883 33.8826 18.6461 34.7966 18.7938C36.906 19.1524 38.6287 20.1649 39.8029 21.7469C40.6748 22.9141 41.1107 24.1938 41.1669 25.7617C41.188 26.261 41.2162 26.7461 41.2373 26.8305C41.2935 27.1188 41.6732 27.4703 42.0599 27.5969C44.1904 28.286 45.8849 30.0789 46.5107 32.3078C46.6654 32.8492 46.7216 34.4524 46.6162 35.0289C46.2083 37.1805 44.8021 38.9945 42.8544 39.9016C41.6732 40.443 41.6802 40.443 37.9607 40.4852C34.7896 40.5274 34.6068 40.5344 34.3818 40.668C33.974 40.907 33.8474 41.1461 33.8474 41.6734C33.8474 42.2149 34.0162 42.5172 34.4169 42.707C34.7474 42.8617 40.6677 42.8617 41.5888 42.707C44.4083 42.2219 46.799 40.457 48.0787 37.9188C48.7185 36.6461 48.9998 35.4156 48.9998 33.8758C48.9998 32.343 48.7466 31.2461 48.0787 29.9031C47.2419 28.2156 45.7583 26.7461 44.0357 25.8883L43.5294 25.6422L43.4873 25.1781C43.2693 22.9563 42.4255 21.0508 41.0052 19.5391C39.4021 17.8375 37.2224 16.7477 34.8318 16.4524C34.2412 16.382 32.7576 16.361 32.1951 16.4242Z"
+                    fill="white"
+                  />
+                  <path
+                    d="M30.6198 29.5937C30.5143 29.6289 30.3596 29.7133 30.2752 29.7836C29.9869 30.0367 26.633 34.1078 26.5627 34.2906C26.4573 34.5578 26.5276 35.1273 26.6893 35.3453C26.9354 35.6828 27.2588 35.8516 27.6526 35.8516C28.1518 35.8516 28.3416 35.7109 29.1432 34.7547L29.8393 33.925L29.8744 39.4445C29.9096 44.718 29.9166 44.9641 30.0432 45.1539C30.451 45.7586 31.5057 45.7726 31.9346 45.175L32.0893 44.957L32.1244 39.4445L32.1596 33.925L32.8487 34.7476C33.2283 35.1976 33.6151 35.6266 33.7205 35.6898C33.819 35.7531 34.0791 35.8234 34.2971 35.8375C34.6205 35.8586 34.733 35.8375 34.9299 35.6969C35.2885 35.4578 35.4432 35.1976 35.4783 34.818C35.5065 34.5578 35.4783 34.4031 35.3729 34.1922C35.1971 33.8687 31.8854 29.9031 31.6323 29.7203C31.4213 29.5726 30.901 29.5023 30.6198 29.5937Z"
+                    fill="white"
+                  />
+                </g>
+                <defs>
+                  <clipPath id="clip0_62_45">
+                    <rect
+                      width="36"
+                      height="36"
+                      fill="white"
+                      transform="translate(13 13)"
+                    />
+                  </clipPath>
+                </defs>
+              </svg>
+              <input type="file" id="uploadFile1" class="hidden" />
+            </label>
           </div>
           <div class="flex justify-between items-center">
-            <button type="button" onclick="window.history.back()" class="px-4 py-2 bg-gray-300 text-black rounded-md">
+            <button
+              type="button"
+              onclick="window.history.back()"
+              class="px-4 py-2 bg-gray-300 text-black rounded-md"
+            >
               Cancel
             </button>
             <a
