--- a/Loader.html
+++ b/Loader.html
@@ -8,14 +8,10 @@
   </head>
   <body class="bg-gray-100">
     <div class="flex justify-center items-center min-h-screen bg-teal-100">
-      <div class="text-center">
-        <h2 class="text-xl font-bold mb-4">Processing your request</h2>
-        <p class="text-gray-800">Please wait...</p>
-        <div
-          aria-label="Loading..."
-          role="status"
-          class="flex items-center space-x-2 justify-center"
-        >
+      <div class="bg-white p-8 rounded-lg shadow-lg w-[600px] h-[600px] flex flex-col justify-center items-center">
+        <h2 class="text-xl font-bold mb-4 text-center">Processing your request</h2>
+        <p class="text-gray-800 text-center mb-8">Please wait...</p>
+        <div aria-label="Loading..." role="status">
           <svg
             class="h-20 w-20 animate-spin stroke-gray-500"
             viewBox="0 0 256 256"
@@ -96,21 +92,5 @@
         </div>
       </div>
     </div>
-
-    <style>
-      .loader {
-        border-top-color: #3498db;
-        animation: spin 1s infinite linear;
-        display: flex !important;
-        justify-content: center !important;
-        align-items: center !important;
-      }
-
-      @keyframes spin {
-        to {
-          transform: rotate(360deg);
-        }
-      }
-    </style>
   </body>
 </html>
